--- a/Site/index.html
+++ b/Site/index.html
@@ -29,6 +29,11 @@
                         </li>
                         <li class="nav-item active">
                             <a href="#" class="nav-link">
+                                FINAL
+                            </a>
+                        </li>
+                        <li class="nav-item active">
+                            <a href="#" class="nav-link">
                                 PLAYERS
                             </a>
                         </li>
