--- a/Site/index.html
+++ b/Site/index.html
@@ -50,6 +50,11 @@
                         </li>
                         <li class="nav-item active">
                             <a href="#" class="nav-link">
+                                REGRAS
+                            </a>
+                        </li>
+                        <li class="nav-item active">
+                            <a href="#" class="nav-link">
                                 1º CAMPEONATO
                             </a>
                         </li>
@@ -57,7 +62,119 @@
                 </div>
             </div>
         </nav>
-    
+
+        <img src="lolzinho.png" class="img-fluid" alt="...">
+
+        <div class="container">
+            <h1 class="text-center">TABELA</h1>
+        </div>
+
+        <div class="container">
+            <div class="row">
+              <div class="col-8">
+                <table class="table">
+                    <thead class="table-dark">
+                      <tr>
+                        <th scope="col"><h3 class="text-end">NOME</h3></th>
+                        <th scope="col"></th>
+                        <th scope="col"><h3>V</h3></th>
+                        <th scope="col"><h3>D</h3></th>
+                        <th scope="col"><h3 p class="text-center">TEMPO</h3></th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <th scope="row" ><img src="icone-1.png " style="width: 68px"/></th>
+                        <td class="align-middle"><h3>TIME 1</h3></td>
+                        <td class="align-middle">0</td>
+                        <td class="align-middle">0</td>
+                        <td class="align-middle"><p class="text-center">0</p></td>
+                      </tr>
+                      <tr>
+                        <th scope="row"><img src="icone-6.png " style="width: 68px"/></th>
+                        <td class="align-middle"><h3>TIME 2</h3></td>
+                        <td class="align-middle">0</td>
+                        <td class="align-middle">0</td>
+                        <td class="align-middle"><p class="text-center">0</p></td>
+                      </tr>
+                      <tr>
+                        <th scope="row"><img src="icone-3.png " style="width: 68px"/></th>
+                        <td class="align-middle"><h3>TIME 3</h3></td>
+                        <td class="align-middle">0</td>
+                        <td class="align-middle">0</td>
+                        <td class="align-middle"><p class="text-center">0</p></td>
+                      </tr>
+                      <tr>
+                        <th scope="row"><img src="icone-4.png " style="width: 68px"/></th>
+                        <td class="align-middle"><h3>TIME 4</h3></td>
+                        <td class="align-middle">0</td>
+                        <td class="align-middle">0</td>
+                        <td class="align-middle"><p class="text-center">0</p></td>
+                      </tr>
+                    </tbody>
+                  </table>
+              </div>
+              <div class="col-4">
+                <table class="table">
+                    <thead class="table-dark">
+                      <tr>
+                        <th colspan="6"><h3 class="text-center">JOGOS</h3></th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td class="align-middle"><p class="text-center">14:00</p></td>
+                        <th scope="row" ><img src="icone-1.png " style="width: 40px"/></th>
+                        <td class="align-middle">0</td>
+                        <td class="align-middle" class="text-start"><img src="xizinho.png"/></td>
+                        <td class="align-middle">0</td>
+                        <th scope="row" ><img src="icone-6.png " style="width: 40px"/></th>
+                      </tr>
+                      <tr>
+                        <td class="align-middle"><p class="text-center">15:00</p></td>  
+                        <th scope="row" ><img src="icone-3.png " style="width: 40px"/></th>
+                        <td class="align-middle">0</td>
+                        <td class="align-middle" class="text-start"><img src="xizinho.png"/></td>
+                        <td class="align-middle">0</td>
+                        <th scope="row" ><img src="icone-4.png " style="width: 40px"/></th>
+                      </tr>
+                      <tr>
+                        <td class="align-middle"><p class="text-center">16:00</p></td>
+                        <th scope="row" ><img src="icone-1.png " style="width: 40px"/></th>
+                        <td class="align-middle">0</td>
+                        <td class="align-middle" class="text-start"><img src="xizinho.png"/></td>
+                        <td class="align-middle">0</td>
+                        <th scope="row" ><img src="icone-3.png " style="width: 40px"/></th>
+                      </tr>
+                      <tr>
+                        <td class="align-middle"><p class="text-center">17:00</p></td>
+                        <th scope="row" ><img src="icone-6.png " style="width: 40px"/></th>
+                        <td class="align-middle">0</td>
+                        <td class="align-middle" class="text-start"><img src="xizinho.png"/></td>
+                        <td class="align-middle">0</td>
+                        <th scope="row" ><img src="icone-4.png " style="width: 40px"/></th>
+                      </tr>
+                      <tr>
+                        <td class="align-middle"><p class="text-center">18:00</p></td>
+                        <th scope="row" ><img src="icone-1.png " style="width: 40px"/></th>
+                        <td class="align-middle">0</td>
+                        <td class="align-middle" class="text-start"><img src="xizinho.png"/></td>
+                        <td class="align-middle">0</td>
+                        <th scope="row" ><img src="icone-4.png " style="width: 40px"/></th>
+                      </tr> 
+                      <tr>
+                        <td class="align-middle"><p class="text-center">19:00</p></td>
+                        <th scope="row" ><img src="icone-6.png " style="width: 40px"/></th>
+                        <td class="align-middle">0</td>
+                        <td class="align-middle" class="text-start"><img src="xizinho.png"/></td>
+                        <td class="align-middle">0</td>
+                        <th scope="row" ><img src="icone-3.png " style="width: 40px"/></th>
+                      </tr>                  
+                    </tbody>
+                  </table>
+              </div>
+            </div>
+          </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
 </body>
