--- a/Site/index.html
+++ b/Site/index.html
@@ -175,6 +175,194 @@
               </div>
             </div>
           </div>
+
+          <div class="container">
+            <h1 class="text-center">FINAL</h1>
+          
+
+          <table class="table table-bordered">
+            <thead>
+              <tr>
+                <th colspan="5"><h3 class="text-center">02/05/2021 - 14:00</h3></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row" ><img src="icone-2.png" class="rounded float-end" style="width: 40px"/></th>
+                <td class="text-center">0</td>               
+                <td class="text-center"><img src="xizinho.png"/></td>
+                <td class="text-center">0</td>
+                <th scope="row" ><img src="icone-2.png " style="width: 40px"/></th>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+
+        <div class="container">
+          <h1 class="text-center">PLAYERS</h1>
+          <div class="container">
+            <div class="row">
+              <div class="col-6">
+                <table class="table table-striped">
+                  <thead>
+                    <tr>
+                      <th scope="col">NICK</th>
+                      <th class="text-end" scope="col">LANE</th>
+                      <th class="text-end" scope="col">RANKING</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=i+hate+diamonds" class="text-decoration-none">I HATE DIAMONDS</a></th>
+                      <td class="text-end"><img src="imagem/positions/Position_Diamond-Mid.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Diamond-Top.png" class="rounded float-end" style="width: 40px"/></td></td>
+                      <td class="text-end"><img src="diamond.png" class="rounded float-end" style="width: 40px"/></td>
+                    </tr>
+                    <tr>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=L%C3%98RU" class="text-decoration-none">LØRU<img src="medalha.png" class="rounded float-end" style="width: 40px"/></a></th>
+                      <td class="text-end"><img src="imagem/positions/Position_Plat-Jungle.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Plat-Mid.png" class="rounded float-end" style="width: 40px"/></td>
+                      <td class="text-end"><img src="platinum.png" class="rounded float-end" style="width: 40px"/></td>
+                    </tr>
+                    <tr>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=tryhard115" class="text-decoration-none">TRYHARD115</a></th>
+                      <td class="text-end"><img src="imagem/positions/Position_Plat-Mid.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Plat-Bot.png" class="rounded float-end" style="width: 40px"/></td>
+                      <td class="text-end"><img src="platinum.png" class="rounded float-end" style="width: 40px"/></td>
+                    </tr>
+                    <tr>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=visenya+tg" class="text-decoration-none">Visenya Tg</a></th>
+                      <td class="text-end"><img src="imagem/positions/Position_Plat-Top.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Plat-Mid.png" class="rounded float-end" style="width: 40px"/></td>
+                      <td class="text-end"><img src="platinum.png" class="rounded float-end" style="width: 40px"/></td>
+                    </tr>
+                    <tr>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=chinaa" class="text-decoration-none">CHINAA</a></th>
+                      <td class="text-end"><img src="imagem/positions/Position_Plat-Bot.png" class="rounded float-end" style="width: 40px"/></td>
+                      <td class="text-end"><img src="platinum.png" class="rounded float-end" style="width: 40px"/></td>
+                    </tr>
+                    <tr>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=AB4T3D0UR0" class="text-decoration-none">AB4T3D0UR0</a></th>
+                      <td class="text-end"><img src="imagem/positions/Position_Plat-Top.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Plat-Mid.png" class="rounded float-end" style="width: 40px"/></td>
+                      <td class="text-end"><img src="platinum.png" class="rounded float-end" style="width: 40px"/></td>
+                    </tr>
+                    <tr>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=KnownHunterX" class="text-decoration-none">KnownHunterX</a></th>
+                      <td class="text-end"><img src="imagem/positions/Position_Plat-Bot.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Plat-Jungle.png" class="rounded float-end" style="width: 40px"/></td>
+                      <td class="text-end"><img src="platinum.png" class="rounded float-end" style="width: 40px"/></td>
+                    </tr>                 
+                    <tr>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=Brunovex" class="text-decoration-none">Brunovex</a></th>
+                      <td class="text-end"><img src="imagem/positions/Position_Plat-Mid.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Plat-Support.png" class="rounded float-end" style="width: 40px"/></td>
+                      <td class="text-end"><img src="platinum.png" class="rounded float-end" style="width: 40px"/></td>
+                    </tr>
+                    <tr>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=Bituzera" class="text-decoration-none">Bituzera<img src="medalha.png" class="rounded float-end" style="width: 40px"/></a></th>
+                      <td class="text-end"><img src="imagem/positions/Position_Gold-Jungle.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Gold-Top.png" class="rounded float-end" style="width: 40px"/></td>
+                      <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
+                    </tr>
+                    <tr>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=Murilo+brand%C3%A3o" class="text-decoration-none">Murilo Brandão</a></th>
+                      <td class="text-end"><img src="imagem/positions/Position_Gold-Mid.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Gold-Bot.png" class="rounded float-end" style="width: 40px"/></td>
+                      <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
+                    </tr> 
+                    <tr>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=Vayne+Open" class="text-decoration-none">Vayne open</a></th>
+                      <td class="text-end"><img src="imagem/positions/Position_Gold-Support.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Gold-Bot.png" class="rounded float-end" style="width: 40px"/></td>
+                      <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
+                    </tr>    
+                    <tr>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=Kanagawa" class="text-decoration-none">Kanagawa</a></th>
+                      <td class="text-end"><img src="imagem/positions/Position_Gold-Mid.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Gold-Top.png" class="rounded float-end" style="width: 40px"/></td>
+                      <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
+                    </tr>   
+                    <tr>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=ar4punk" class="text-decoration-none">Ar4punk</a></th>
+                      <td class="text-end"><img src="imagem/positions/Position_Gold-Mid.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Gold-Jungle.png" class="rounded float-end" style="width: 40px"/></td>
+                      <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
+                    </tr>                                 
+                  </tbody>
+                </table>
+              </div>
+              <div class="col-6">
+                <table class="table table-striped">
+                  <thead>
+                    <tr>
+                      <th scope="col">NICK</th>
+                      <th class="text-end" scope="col">LANE</th>
+                      <th class="text-end" scope="col">RANKING</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=ok+thats+it" class="text-decoration-none">ok thats it</a></th>
+                      <td class="text-end"><img src="imagem/positions/Position_Gold-Jungle.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Gold-Top.png" class="rounded float-end" style="width: 40px"/></td>
+                      <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
+                    </tr>    
+                    <tr>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=matador+de+velha" class="text-decoration-none">Matador de velha</a></th>
+                      <td class="text-end"><img src="imagem/positions/Position_Gold-Jungle.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Gold-Bot.png" class="rounded float-end" style="width: 40px"/></td>
+                      <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
+                    </tr>     
+                    <tr>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=BMontes" class="text-decoration-none">BMontes</a></th>
+                      <td class="text-end"><img src="imagem/positions/Position_Gold-Top.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Gold-Mid.png" class="rounded float-end" style="width: 40px"/></td>
+                      <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
+                    </tr> 
+                    <tr>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=Hooked+on+u" class="text-decoration-none">Hooked on u</a></th>
+                      <td class="text-end"><img src="imagem/positions/Position_Gold-Top.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Gold-Support.png" class="rounded float-end" style="width: 40px"/></td>
+                      <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
+                    </tr>  
+                    <tr>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=Tiltin" class="text-decoration-none">Tiltin</a></th>
+                      <td class="text-end"><img src="imagem/positions/Position_Gold-Mid.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Gold-Jungle.png" class="rounded float-end" style="width: 40px"/></td>
+                      <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
+                    </tr> 
+                    <tr>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=RoganiZero" class="text-decoration-none">RoganiZero</a></th>
+                      <td class="text-end"><img src="imagem/positions/Position_Gold-Top.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Gold-Support.png" class="rounded float-end" style="width: 40px"/></td>
+                      <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
+                    </tr> 
+                    <tr>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=marcoslg87" class="text-decoration-none">Marcoslg87</a></th>
+                      <td class="text-end"><img src="imagem/positions/Position_Gold-Jungle.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Gold-Top.png" class="rounded float-end" style="width: 40px"/></td>
+                      <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
+                    </tr> 
+                    <tr>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=Qiyana+Kawaii" class="text-decoration-none">Qiyana Kawaii</a></th>
+                      <td class="text-end"><img src="imagem/positions/Position_Silver-Support.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Silver-Mid.png" class="rounded float-end" style="width: 40px"/></td>
+                      <td class="text-end"><img src="silver.png" class="rounded float-end" style="width: 40px"/></td>
+                    </tr>
+                    <tr>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=Menina+iCarlen" class="text-decoration-none">Menina iCarlen</a></th>
+                      <td class="text-end"><img src="imagem/positions/Position_Silver-Mid.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Silver-Top.png" class="rounded float-end" style="width: 40px"/></td>
+                      <td class="text-end"><img src="silver.png" class="rounded float-end" style="width: 40px"/></td>
+                    </tr>
+                    <tr>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=frey+agatsuma" class="text-decoration-none">Frey Agatsuma <img src="medalha.png" class="rounded float-end" style="width: 40px"/></a></th>
+                      <td class="text-end"><img src="imagem/positions/Position_Silver-Mid.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Silver-Support.png" class="rounded float-end" style="width: 40px"/></td>
+                      <td class="text-end"><img src="silver.png" class="rounded float-end" style="width: 40px"/></td>
+                    </tr>
+                    <tr>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=mineirokids" class="text-decoration-none">mineirokids</a></th>
+                      <td class="text-end"><img src="imagem/positions/Position_Silver-Support.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Silver-Bot.png" class="rounded float-end" style="width: 40px"/></td>
+                      <td class="text-end"><img src="silver.png" class="rounded float-end" style="width: 40px"/></td>
+                    </tr>    
+                    <tr>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=JukesDaFran%C3%A7a" class="text-decoration-none">JukesDaFrança</a></th>
+                      <td class="text-end"><img src="imagem/positions/Position_Silver-Top.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Silver-Mid.png" style="width: 40px"/></td>
+                      <td class="text-end"><img src="silver.png" class="rounded float-end" style="width: 40px"/></td>
+                    </tr>     
+                    <tr>
+                      <th scope="row"><a href="https://br.op.gg/summoner/userName=tha%C3%ADs" class="text-decoration-none">Thaís ADM<img src="admin.png" class="rounded float-end" style="width: 40px"/></a></th>
+                      <td class="text-end"><img src="imagem/positions/Position_Gold-Support.png" class="rounded float-end" style="width: 40px"/></td>
+                      <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
+                    </tr>                           
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
 </body>
