--- a/Site/index.html
+++ b/Site/index.html
@@ -322,8 +322,8 @@
                     </tr> 
                     <tr>
                       <th scope="row"><a href="https://euw.op.gg/summoner/userName=marcoslg87" class="text-decoration-none">Marcoslg87</a></th>
-                      <td class="text-end"><img src="imagem/positions/Position_Gold-Jungle.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Gold-Top.png" class="rounded float-end" style="width: 40px"/></td>
-                      <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
+                      <td class="text-end"><img src="imagem/positions/Position_Silver-Jungle.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Silver-Top.png" class="rounded float-end" style="width: 40px"/></td>
+                      <td class="text-end"><img src="silver.png" class="rounded float-end" style="width: 40px"/></td>
                     </tr> 
                     <tr>
                       <th scope="row"><a href="https://euw.op.gg/summoner/userName=Qiyana+Kawaii" class="text-decoration-none">Qiyana Kawaii</a></th>
