--- a/Site/index.html
+++ b/Site/index.html
@@ -42,9 +42,9 @@
                                 TIMES
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a href="#time1" class="dropdown-item">TIME 1</a></li>
-                                <li><a href="#time2" class="dropdown-item">TIME 2</a></li>
-                                <li><a href="#time3" class="dropdown-item">TIME 3</a></li>
+                                <li><a href="#gay" class="dropdown-item">Gorgeous amazing yordles</a></li>
+                                <li><a href="#600" class="dropdown-item">600</a></li>
+                                <li><a href="#creme" class="dropdown-item">Le Creme de La Crime</a></li>
                                 <li><a href="#pain" class="dropdown-item">PAIN EXODIA</a></li>
                                 <li><a href="#time5" class="dropdown-item">TIME 5</a></li>
                                 <li><a href="#time6" class="dropdown-item">TIME 6</a></li>
@@ -210,12 +210,12 @@
                   </thead>
                   <tbody>
                     <tr>
-                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=i+hate+diamonds" target="_blank" class="text-decoration-none">I HATE DIAMONDS</a></th>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=i+play+vrchat" target="_blank" class="text-decoration-none">I play vrchat</a></th>
                       <td class="text-end"><img src="imagem/positions/Position_Diamond-Mid.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Diamond-Top.png" class="rounded float-end" style="width: 40px"/></td></td>
                       <td class="text-end"><img src="diamond.png" class="rounded float-end" style="width: 40px"/></td>
                     </tr>
                     <tr>
-                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=tryhard115" target="_blank" class="text-decoration-none">TRYHARD115</a></th>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=dognwo" target="_blank" class="text-decoration-none">dognwo</a></th>
                       <td class="text-end"><img src="imagem/positions/Position_Diamond-Mid.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Diamond-Bot.png" class="rounded float-end" style="width: 40px"/></td>
                       <td class="text-end"><img src="diamond.png" class="rounded float-end" style="width: 40px"/></td>
                     </tr>
@@ -265,15 +265,15 @@
                       <td class="text-end"><img src="platinum.png" class="rounded float-end" style="width: 40px"/></td>
                     </tr>
                     <tr>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=Shauna+%CE%BDayne" target="_blank" class="text-decoration-none">Shauna νayne</a></th>
+                      <td class="text-end"><img src="imagem/positions/Position_Plat-Support.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Plat-Bot.png" class="rounded float-end" style="width: 40px"/></td>
+                      <td class="text-end"><img src="platinum.png" class="rounded float-end" style="width: 40px"/></td>
+                    </tr> 
+                    <tr>
                       <th scope="row"><a href="https://euw.op.gg/summoner/userName=Murilo+brand%C3%A3o" target="_blank" class="text-decoration-none">Murilo Brandão</a></th>
                       <td class="text-end"><img src="imagem/positions/Position_Gold-Mid.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Gold-Bot.png" class="rounded float-end" style="width: 40px"/></td>
                       <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
-                    </tr> 
-                    <tr>
-                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=Shauna+%CE%BDayne" target="_blank" class="text-decoration-none">Shauna νayne</a></th>
-                      <td class="text-end"><img src="imagem/positions/Position_Gold-Support.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Gold-Bot.png" class="rounded float-end" style="width: 40px"/></td>
-                      <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
-                    </tr>  
+                    </tr>                     
                     <tr>
                       <th scope="row"><a href="https://euw.op.gg/summoner/userName=BR+YuuTaaWuu" target="_blank" class="text-decoration-none">BR YuutaaWuu <img src="medalha.png" class="rounded float-end" style="width: 40px"/></a></th>
                       <td class="text-end"><img src="imagem/positions/Position_Gold-Bot.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Gold-Jungle.png" class="rounded float-end" style="width: 40px"/></td>
@@ -395,7 +395,7 @@
               <table class="table">
                 <thead class="table-dark">
                   <tr>
-                    <th scope="col">TIME 1</th>
+                    <th scope="col" id="gay">Gorgeous amazing yordles</th>
                     <th class="text-end" scope="col">LANE</th>
                     <th class="text-end" scope="col">RANKING</th>
                   </tr>
@@ -437,7 +437,7 @@
               <table class="table">
                 <thead class="table-dark">
                   <tr>
-                    <th scope="col">TIME 2</th>
+                    <th scope="col" id="600">600</th>
                     <th class="text-end" scope="col">LANE</th>
                     <th class="text-end" scope="col">RANKING</th>
                   </tr>
@@ -479,7 +479,7 @@
               <table class="table">
                 <thead class="table-dark">
                   <tr>
-                    <th scope="col">TIME 3</th>
+                    <th scope="col" id="creme">Le Creme de La Crime</th>
                     <th class="text-end" scope="col">LANE</th>
                     <th class="text-end" scope="col">RANKING</th>
                   </tr>
@@ -531,21 +531,21 @@
                     <th scope="row"><a href="https://euw.op.gg/summoner/userName=Menina+iCarlen" target="_blank" class="text-decoration-none">Menina iCarlen</a></th>
                     <td class="text-end"><img src="imagem/positions/Position_Gold-Top.png" class="rounded float-end" style="width: 40px"/></td></td>
                     <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
-                  </tr>           
-                  <tr>
-                    <th scope="row"><a href="https://euw.op.gg/summoner/userName=Tiltin" target="_blank" class="text-decoration-none">Tiltin</a></th>
-                    <td class="text-end"><img src="imagem/positions/Position_Gold-Jungle.png" class="rounded float-end" style="width: 40px"/></td></td>
-                    <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
-                  </tr>  
+                  </tr>   
                   <tr>
                     <th scope="row"><a href="https://euw.op.gg/summoner/userName=L%C3%98RU" target="_blank" class="text-decoration-none">LØRU</a></th>
-                    <td class="text-end"><img src="imagem/positions/Position_Diamond-Mid.png" class="rounded float-end" style="width: 40px"/></td></td>
+                    <td class="text-end"><img src="imagem/positions/Position_Diamond-Jungle.png" class="rounded float-end" style="width: 40px"/></td></td>
                     <td class="text-end"><img src="diamond.png" class="rounded float-end" style="width: 40px"/></td>
-                  </tr> 
+                  </tr>         
+                  <tr>
+                    <th scope="row"><a href="https://euw.op.gg/summoner/userName=Tiltin" target="_blank" class="text-decoration-none">Tiltin</a></th>
+                    <td class="text-end"><img src="imagem/positions/Position_Gold-Mid.png" class="rounded float-end" style="width: 40px"/></td></td>
+                    <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
+                  </tr>                   
                   <tr>
                     <th scope="row"><a href="https://euw.op.gg/summoner/userName=Shauna+%CE%BDayne" target="_blank" class="text-decoration-none">Shauna νayne</a></th>
-                    <td class="text-end"><img src="imagem/positions/Position_Gold-Bot.png" class="rounded float-end" style="width: 40px"/></td></td>
-                    <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
+                    <td class="text-end"><img src="imagem/positions/Position_Plat-Bot.png" class="rounded float-end" style="width: 40px"/></td></td>
+                    <td class="text-end"><img src="platinum.png" class="rounded float-end" style="width: 40px"/></td>
                   </tr>  
                   <tr>
                     <th scope="row"><a href="https://euw.op.gg/summoner/userName=Sexy+Karma" target="_blank" class="text-decoration-none">Sexy Karma</a></th>
