--- a/Site/index.html
+++ b/Site/index.html
@@ -46,7 +46,7 @@
                                 <li><a href="#600" class="dropdown-item">600</a></li>
                                 <li><a href="#creme" class="dropdown-item">Le Creme de La Crime</a></li>
                                 <li><a href="#pain" class="dropdown-item">PAIN EXODIA</a></li>
-                                <li><a href="#time5" class="dropdown-item">TIME 5</a></li>
+                                <li><a href="#kids" class="dropdown-item">Kids do Mineiro</a></li>
                                 <li><a href="#time6" class="dropdown-item">TIME 6</a></li>
                             </ul>
                         </li>
@@ -87,7 +87,7 @@
                       <td class="align-middle">0</td>
                       <td class="align-middle" class="text-start"><img src="xizinho.png"/></td>
                       <td class="align-middle">0</td>
-                      <th scope="row" ><img src="icone-2.png " style="width: 40px"/></th>
+                      <th scope="row" ><img src="imagem/600" style="width: 40px"/></th>
                     </tr>
                     <tr>
                       <td class="align-middle"><p class="text-center">15:40</p></td>  
@@ -99,7 +99,7 @@
                     </tr>
                     <tr>
                       <td class="align-middle"><p class="text-center">17:20</p></td>
-                      <th scope="row" ><img src="icone-2.png " style="width: 40px"/></th>
+                      <th scope="row" ><img src="imagem/600" style="width: 40px"/></th>
                       <td class="align-middle">0</td>
                       <td class="align-middle" class="text-start"><img src="xizinho.png"/></td>
                       <td class="align-middle">0</td>
@@ -442,27 +442,27 @@
                     <th class="text-end" scope="col">RANKING</th>
                   </tr>
                 </thead>
-                <tbody>
+                <tbody>          
                   <tr>
-                    <th scope="row"><a href="https://euw.op.gg/summoner/userName=psxL" target="_blank" class="text-decoration-none">psxL</a></th>
+                    <th scope="row"><a href="https://euw.op.gg/summoner/userName=N%C3%A3o+%C3%A9+o+Rogani" target="_blank" class="text-decoration-none">Não é o Rogani</a></th>
                     <td class="text-end"><img src="imagem/positions/Position_Gold-Top.png" class="rounded float-end" style="width: 40px"/></td></td>
                     <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
                   </tr>  
                   <tr>
-                    <th scope="row"><a href="https://euw.op.gg/summoner/userName=N%C3%A3o+%C3%A9+o+Rogani" target="_blank" class="text-decoration-none">Não é o Rogani</a></th>
-                    <td class="text-end"><img src="imagem/positions/Position_Gold-Jungle.png" class="rounded float-end" style="width: 40px"/></td></td>
-                    <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
-                  </tr>  
-                  <tr>
                     <th scope="row"><a href="https://euw.op.gg/summoner/userName=Bituzera" target="_blank" class="text-decoration-none">Bituzera</a></th>
-                    <td class="text-end"><img src="imagem/positions/Position_Plat-Mid.png" class="rounded float-end" style="width: 40px"/></td></td>
+                    <td class="text-end"><img src="imagem/positions/Position_Plat-Jungle.png" class="rounded float-end" style="width: 40px"/></td></td>
                     <td class="text-end"><img src="platinum.png" class="rounded float-end" style="width: 40px"/></td>
                   </tr>  
                   <tr>
-                    <th scope="row"><a href="https://euw.op.gg/summoner/userName=tryhard115" target="_blank" class="text-decoration-none">TRYHARD115</a></th>
-                    <td class="text-end"><img src="imagem/positions/Position_Diamond-Bot.png" class="rounded float-end" style="width: 40px"/></td></td>
+                    <th scope="row"><a href="https://euw.op.gg/summoner/userName=dognwo" target="_blank" class="text-decoration-none">dognwo</a></th>
+                    <td class="text-end"><img src="imagem/positions/Position_Diamond-Mid.png" class="rounded float-end" style="width: 40px"/></td></td>
                     <td class="text-end"><img src="diamond.png" class="rounded float-end" style="width: 40px"/></td>
                   </tr>  
+                  <tr>
+                    <th scope="row"><a href="https://euw.op.gg/summoner/userName=psxL" target="_blank" class="text-decoration-none">psxL</a></th>
+                    <td class="text-end"><img src="imagem/positions/Position_Gold-Bot.png" class="rounded float-end" style="width: 40px"/></td></td>
+                    <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
+                  </tr>
                   <tr>
                     <th scope="row"><a href="https://euw.op.gg/summoner/userName=Ziulxd" target="_blank" class="text-decoration-none">Ziulxd</a></th>
                     <td class="text-end"><img src="imagem/positions/Position_Bronze-Support.png" class="rounded float-end" style="width: 40px"/></td></td>
@@ -471,7 +471,7 @@
               </table>
             </div>    
             <div class="col-6">
-              <img src="icone-2.png" class="rounded-circle mx-auto d-block"  style="width: 50%">
+              <img src="imagem/600" class="rounded-circle mx-auto d-block"  style="width: 50%">
             </div>               
           </div>
           <div class="row">           
@@ -563,14 +563,14 @@
               <table class="table">
                 <thead class="table-dark">
                   <tr>
-                    <th scope="col">TIME 5</th>
+                    <th scope="col" id="kids">Kids do Mineiro</th>
                     <th class="text-end" scope="col">LANE</th>
                     <th class="text-end" scope="col">RANKING</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    <th scope="row"><a href="https://euw.op.gg/summoner/userName=i+hate+diamonds" target="_blank" class="text-decoration-none">I HATE DIAMONDS</a></th>
+                    <th scope="row"><a href="https://euw.op.gg/summoner/userName=i+play+vrchat" target="_blank" class="text-decoration-none">I play vrchat</a></th>
                     <td class="text-end"><img src="imagem/positions/Position_Diamond-Top.png" class="rounded float-end" style="width: 40px"/></td></td>
                     <td class="text-end"><img src="diamond.png" class="rounded float-end" style="width: 40px"/></td>
                   </tr>  
