--- a/Site/index.html
+++ b/Site/index.html
@@ -47,7 +47,7 @@
                                 <li><a href="#creme" class="dropdown-item">Le Creme de La Crime</a></li>
                                 <li><a href="#pain" class="dropdown-item">PAIN EXODIA</a></li>
                                 <li><a href="#kids" class="dropdown-item">Kids do Mineiro</a></li>
-                                <li><a href="#time6" class="dropdown-item">TIME 6</a></li>
+                                <li><a href="#ff" class="dropdown-item">Equipe FF</a></li>
                             </ul>
                         </li>
                         <li class="nav-item active">
@@ -87,7 +87,7 @@
                       <td class="align-middle">0</td>
                       <td class="align-middle" class="text-start"><img src="xizinho.png"/></td>
                       <td class="align-middle">0</td>
-                      <th scope="row" ><img src="imagem/600" style="width: 40px"/></th>
+                      <th scope="row" ><img src="icone-2.png" style="width: 40px"/></th>
                     </tr>
                     <tr>
                       <td class="align-middle"><p class="text-center">15:40</p></td>  
@@ -99,7 +99,7 @@
                     </tr>
                     <tr>
                       <td class="align-middle"><p class="text-center">17:20</p></td>
-                      <th scope="row" ><img src="imagem/600" style="width: 40px"/></th>
+                      <th scope="row" ><img src="icone-2.png" style="width: 40px"/></th>
                       <td class="align-middle">0</td>
                       <td class="align-middle" class="text-start"><img src="xizinho.png"/></td>
                       <td class="align-middle">0</td>
@@ -471,7 +471,7 @@
               </table>
             </div>    
             <div class="col-6">
-              <img src="imagem/600" class="rounded-circle mx-auto d-block"  style="width: 50%">
+              <img src="icone-2.png" class="rounded-circle mx-auto d-block"  style="width: 50%">
             </div>               
           </div>
           <div class="row">           
@@ -605,7 +605,7 @@
               <table class="table">
                 <thead class="table-dark">
                   <tr>
-                    <th scope="col">TIME 6</th>
+                    <th scope="col" id="ff">Equipe FF</th>
                     <th class="text-end" scope="col">LANE</th>
                     <th class="text-end" scope="col">RANKING</th>
                   </tr>
