--- a/Site/index.html
+++ b/Site/index.html
@@ -84,25 +84,25 @@
                     <tr>
                       <td class="align-middle"><p class="text-center">14:00</p></td>
                       <th scope="row" ><img src="icone-1.png " style="width: 40px"/></th>
-                      <td class="align-middle">0</td>
+                      <td class="align-middle">D</td>
                       <td class="align-middle" class="text-start"><img src="xizinho.png"/></td>
-                      <td class="align-middle">0</td>
+                      <td class="align-middle">V</td>
                       <th scope="row" ><img src="icone-2.png" style="width: 40px"/></th>
                     </tr>
                     <tr>
                       <td class="align-middle"><p class="text-center">15:40</p></td>  
                       <th scope="row" ><img src="icone-1.png " style="width: 40px"/></th>
-                      <td class="align-middle">0</td>
+                      <td class="align-middle">D</td>
                       <td class="align-middle" class="text-start"><img src="xizinho.png"/></td>
-                      <td class="align-middle">0</td>
+                      <td class="align-middle">V</td>
                       <th scope="row" ><img src="icone-3.png " style="width: 40px"/></th>
                     </tr>
                     <tr>
                       <td class="align-middle"><p class="text-center">17:20</p></td>
                       <th scope="row" ><img src="icone-2.png" style="width: 40px"/></th>
-                      <td class="align-middle">0</td>
+                      <td class="align-middle">V</td>
                       <td class="align-middle" class="text-start"><img src="xizinho.png"/></td>
-                      <td class="align-middle">0</td>
+                      <td class="align-middle">D</td>
                       <th scope="row" ><img src="icone-3.png " style="width: 40px"/></th>
                     </tr>                 
                   </tbody>
@@ -119,25 +119,25 @@
                     <tr>
                       <td class="align-middle"><p class="text-center">14:50</p></td>
                       <th scope="row" ><img src="icone-4.png " style="width: 40px"/></th>
-                      <td class="align-middle">0</td>
+                      <td class="align-middle">D</td>
                       <td class="align-middle" class="text-start"><img src="xizinho.png"/></td>
-                      <td class="align-middle">0</td>
+                      <td class="align-middle">V</td>
                       <th scope="row" ><img src="icone-5.png " style="width: 40px"/></th>
                     </tr>
                     <tr>
                       <td class="align-middle"><p class="text-center">16:30</p></td>  
                       <th scope="row" ><img src="icone-4.png " style="width: 40px"/></th>
-                      <td class="align-middle">0</td>
+                      <td class="align-middle">V</td>
                       <td class="align-middle" class="text-start"><img src="xizinho.png"/></td>
-                      <td class="align-middle">0</td>
+                      <td class="align-middle">D</td>
                       <th scope="row" ><img src="icone-6.png " style="width: 40px"/></th>
                     </tr>
                     <tr>
                       <td class="align-middle"><p class="text-center">18:10</p></td>
                       <th scope="row" ><img src="icone-5.png " style="width: 40px"/></th>
-                      <td class="align-middle">0</td>
+                      <td class="align-middle">D</td>
                       <td class="align-middle" class="text-start"><img src="xizinho.png"/></td>
-                      <td class="align-middle">0</td>
+                      <td class="align-middle">W.O</td>
                       <th scope="row" ><img src="icone-6.png " style="width: 40px"/></th>
                     </tr>               
                   </tbody>
@@ -157,19 +157,19 @@
             <tbody>
               <tr>
                 <td class="align-middle"><p class="text-center">19:00</p></td>
-                <th scope="row" class="text-center" ><img src="provisional.png" style="width: 40px"/></th>
-                <td class="text-center">0</td>
+                <th scope="row" class="text-center" ><img src="icone-1.png" style="width: 40px"/></th>
+                <td class="text-center">D</td>
                 <td class="text-center"><img src="xizinho.png"/></td>
-                <td class="text-center">0</td>
-                <th scope="row" class="text-center"><img src="provisional.png" style="width: 40px"/></th>
+                <td class="text-center">V</td>
+                <th scope="row" class="text-center"><img src="icone-4.png" style="width: 40px"/></th>
               </tr>
               <tr>
                 <td class="align-middle"><p class="text-center">19:50</p></td>  
-                <th scope="row" class="text-center"><img src="provisional.png" style="width: 40px"/></th>
-                <td class="text-center">0</td>
+                <th scope="row" class="text-center"><img src="icone-3.png" style="width: 40px"/></th>
+                <td class="text-center">D</td>
                 <td class="text-center"><img src="xizinho.png"/></td>
-                <td class="text-center">0</td>
-                <th scope="row" class="text-center"><img src="provisional.png" style="width: 40px"/></th>
+                <td class="text-center">V</td>
+                <th scope="row" class="text-center"><img src="icone-6.png" style="width: 40px"/></th>
               </tr>
             </tbody>
           </table>
@@ -185,11 +185,11 @@
             </thead>
             <tbody>
               <tr>
-                <th scope="row" ><img src="provisional.png" class="rounded float-end" style="width: 40px"/></th>
-                <td class="text-center">0</td>               
+                <th scope="row" ><img src="icone-4.png" class="rounded float-end" style="width: 40px"/></th>
+                <td class="text-center">3</td>               
                 <td class="text-center"><img src="xizinho.png"/></td>
-                <td class="text-center">0</td>
-                <th scope="row" ><img src="provisional.png" style="width: 40px"/></th>
+                <td class="text-center">1</td>
+                <th scope="row" ><img src="icone-6.png" style="width: 40px"/></th>
               </tr>
             </tbody>
           </table>
@@ -220,7 +220,7 @@
                       <td class="text-end"><img src="diamond.png" class="rounded float-end" style="width: 40px"/></td>
                     </tr>
                     <tr>
-                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=L%C3%98RU" target="_blank" class="text-decoration-none">LØRU<img src="medalha.png" class="rounded float-end" style="width: 40px"/></a></th>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=L%C3%98RU" target="_blank" class="text-decoration-none">LØRU<img src="medalha.png" class="rounded float-end" style="width: 40px"/><img src="medalha.png" class="rounded float-end" style="width: 40px"/></a></th>
                       <td class="text-end"><img src="imagem/positions/Position_Diamond-Jungle.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Diamond-Mid.png" class="rounded float-end" style="width: 40px"/></td>
                       <td class="text-end"><img src="diamond.png" class="rounded float-end" style="width: 40px"/></td>
                     </tr>
@@ -265,7 +265,7 @@
                       <td class="text-end"><img src="platinum.png" class="rounded float-end" style="width: 40px"/></td>
                     </tr>
                     <tr>
-                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=Shauna+%CE%BDayne" target="_blank" class="text-decoration-none">Shauna νayne</a></th>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=Shauna+%CE%BDayne" target="_blank" class="text-decoration-none">Shauna νayne<img src="medalha.png" class="rounded float-end" style="width: 40px"/></a></th>
                       <td class="text-end"><img src="imagem/positions/Position_Plat-Support.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Plat-Bot.png" class="rounded float-end" style="width: 40px"/></td>
                       <td class="text-end"><img src="platinum.png" class="rounded float-end" style="width: 40px"/></td>
                     </tr> 
@@ -313,7 +313,7 @@
                       <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
                     </tr> 
                     <tr>
-                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=Tiltin" target="_blank" class="text-decoration-none">Tiltin</a></th>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=Tiltin" target="_blank" class="text-decoration-none">Tiltin<img src="medalha.png" class="rounded float-end" style="width: 40px"/></a></th>
                       <td class="text-end"><img src="imagem/positions/Position_Gold-Mid.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Gold-Jungle.png" class="rounded float-end" style="width: 40px"/></td>
                       <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
                     </tr> 
@@ -328,7 +328,7 @@
                       <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
                     </tr>
                     <tr>
-                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=Menina+iCarlen" target="_blank" class="text-decoration-none">Menina iCarlen</a></th>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=Menina+iCarlen" target="_blank" class="text-decoration-none">Menina iCarlen<img src="medalha.png" class="rounded float-end" style="width: 40px"/></a></th>
                       <td class="text-end"><img src="imagem/positions/Position_Gold-Mid.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Gold-Top.png" class="rounded float-end" style="width: 40px"/></td>
                       <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
                     </tr>
@@ -348,7 +348,7 @@
                       <td class="text-end"><img src="silver.png" class="rounded float-end" style="width: 40px"/></td>
                     </tr>
                     <tr>
-                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=Sexy+Karma" target="_blank" class="text-decoration-none">Sexy Karma</a></th>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=Sexy+Karma" target="_blank" class="text-decoration-none">Sexy Karma<img src="medalha.png" class="rounded float-end" style="width: 40px"/></a></th>
                       <td class="text-end"><img src="imagem/positions/Position_Silver-Mid.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Silver-Support.png" class="rounded float-end" style="width: 40px"/></td>
                       <td class="text-end"><img src="silver.png" class="rounded float-end" style="width: 40px"/></td>
                     </tr>  
@@ -697,8 +697,8 @@
                 <tbody>
                   <tr>
                     <th scope="row"><a href="https://euw.op.gg/summoner/userName=Bituzera" target="_blank" class="text-decoration-none">Bituzera<img src="medalha.png" class="rounded float-end" style="width: 40px"/></a></th>
-                    <td class="text-end"><img src="imagem/positions/Position_Gold-Top.png" class="rounded float-end" style="width: 40px"/></td>
-                    <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
+                    <td class="text-end"><img src="imagem/positions/Position_Plat-Top.png" class="rounded float-end" style="width: 40px"/></td>
+                    <td class="text-end"><img src="platinum.png" class="rounded float-end" style="width: 40px"/></td>
                   </tr>
                   <tr>
                     <th scope="row"><a href="https://euw.op.gg/summoner/userName=BR+YuuTaaWuu" target="_blank" class="text-decoration-none">BR YuutaaWuu <img src="medalha.png" class="rounded float-end" style="width: 40px"/></a></th>
