--- a/Site/index.html
+++ b/Site/index.html
@@ -220,7 +220,7 @@
                       <td class="text-end"><img src="diamond.png" class="rounded float-end" style="width: 40px"/></td>
                     </tr>
                     <tr>
-                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=L%C3%98RU" target="_blank" class="text-decoration-none">LØRU<img src="medalha.png" class="rounded float-end" style="width: 40px"/><img src="medalha.png" class="rounded float-end" style="width: 40px"/></a></th>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=L%C3%98RU" target="_blank" class="text-decoration-none">LØRU</a><img src="medalha.png" class="rounded float-end" style="width: 40px"/><img src="medalha.png" class="rounded float-end" style="width: 40px"/></th>
                       <td class="text-end"><img src="imagem/positions/Position_Diamond-Jungle.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Diamond-Mid.png" class="rounded float-end" style="width: 40px"/></td>
                       <td class="text-end"><img src="diamond.png" class="rounded float-end" style="width: 40px"/></td>
                     </tr>
@@ -260,12 +260,12 @@
                       <td class="text-end"><img src="platinum.png" class="rounded float-end" style="width: 40px"/></td>
                     </tr>                               
                     <tr>
-                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=Bituzera" target="_blank" class="text-decoration-none">Bituzera<img src="medalha.png" class="rounded float-end" style="width: 40px"/></a></th>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=Bituzera" target="_blank" class="text-decoration-none">Bituzera</a><img src="medalha.png" class="rounded float-end" style="width: 40px"/></th>
                       <td class="text-end"><img src="imagem/positions/Position_Plat-Jungle.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Plat-Top.png" class="rounded float-end" style="width: 40px"/></td>
                       <td class="text-end"><img src="platinum.png" class="rounded float-end" style="width: 40px"/></td>
                     </tr>
                     <tr>
-                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=Shauna+%CE%BDayne" target="_blank" class="text-decoration-none">Shauna νayne<img src="medalha.png" class="rounded float-end" style="width: 40px"/></a></th>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=Shauna+%CE%BDayne" target="_blank" class="text-decoration-none">Shauna νayne</a><img src="medalha.png" class="rounded float-end" style="width: 40px"/></th>
                       <td class="text-end"><img src="imagem/positions/Position_Plat-Support.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Plat-Bot.png" class="rounded float-end" style="width: 40px"/></td>
                       <td class="text-end"><img src="platinum.png" class="rounded float-end" style="width: 40px"/></td>
                     </tr> 
@@ -275,7 +275,7 @@
                       <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
                     </tr>                     
                     <tr>
-                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=BR+YuuTaaWuu" target="_blank" class="text-decoration-none">BR YuutaaWuu <img src="medalha.png" class="rounded float-end" style="width: 40px"/></a></th>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=BR+YuuTaaWuu" target="_blank" class="text-decoration-none">BR YuutaaWuu</a><img src="medalha.png" class="rounded float-end" style="width: 40px"/></th>
                       <td class="text-end"><img src="imagem/positions/Position_Gold-Bot.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Gold-Jungle.png" class="rounded float-end" style="width: 40px"/></td>
                       <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
                     </tr>    
@@ -313,7 +313,7 @@
                       <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
                     </tr> 
                     <tr>
-                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=Tiltin" target="_blank" class="text-decoration-none">Tiltin<img src="medalha.png" class="rounded float-end" style="width: 40px"/></a></th>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=Tiltin" target="_blank" class="text-decoration-none">Tiltin</a><img src="medalha.png" class="rounded float-end" style="width: 40px"/></th>
                       <td class="text-end"><img src="imagem/positions/Position_Gold-Mid.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Gold-Jungle.png" class="rounded float-end" style="width: 40px"/></td>
                       <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
                     </tr> 
@@ -328,7 +328,7 @@
                       <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
                     </tr>
                     <tr>
-                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=Menina+iCarlen" target="_blank" class="text-decoration-none">Menina iCarlen<img src="medalha.png" class="rounded float-end" style="width: 40px"/></a></th>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=Menina+iCarlen" target="_blank" class="text-decoration-none">Menina iCarlen</a><img src="medalha.png" class="rounded float-end" style="width: 40px"/></th>
                       <td class="text-end"><img src="imagem/positions/Position_Gold-Mid.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Gold-Top.png" class="rounded float-end" style="width: 40px"/></td>
                       <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
                     </tr>
@@ -343,12 +343,12 @@
                       <td class="text-end"><img src="silver.png" class="rounded float-end" style="width: 40px"/></td>
                     </tr>        
                     <tr>
-                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=frey+agatsuma" target="_blank" class="text-decoration-none">Frey Agatsuma <img src="medalha.png" class="rounded float-end" style="width: 40px"/></a></th>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=frey+agatsuma" target="_blank" class="text-decoration-none">Frey Agatsuma</a><img src="medalha.png" class="rounded float-end" style="width: 40px"/></th>
                       <td class="text-end"><img src="imagem/positions/Position_Silver-Mid.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Silver-Support.png" class="rounded float-end" style="width: 40px"/></td>
                       <td class="text-end"><img src="silver.png" class="rounded float-end" style="width: 40px"/></td>
                     </tr>
                     <tr>
-                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=Sexy+Karma" target="_blank" class="text-decoration-none">Sexy Karma<img src="medalha.png" class="rounded float-end" style="width: 40px"/></a></th>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=Sexy+Karma" target="_blank" class="text-decoration-none">Sexy Karma</a><img src="medalha.png" class="rounded float-end" style="width: 40px"/></th>
                       <td class="text-end"><img src="imagem/positions/Position_Silver-Mid.png" class="rounded float-end" style="width: 40px"/><img src="imagem/positions/Position_Silver-Support.png" class="rounded float-end" style="width: 40px"/></td>
                       <td class="text-end"><img src="silver.png" class="rounded float-end" style="width: 40px"/></td>
                     </tr>  
@@ -373,7 +373,7 @@
                       <td class="text-end"><img src="provisional.png" class="rounded float-end" style="width: 40px"/></td>
                     </tr>
                     <tr>
-                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=Tha%C3%ADs" target="_blank" class="text-decoration-none">Thaís ADM<img src="admin.png" class="rounded float-end" style="width: 40px"/></a></th>
+                      <th scope="row"><a href="https://euw.op.gg/summoner/userName=Tha%C3%ADs" target="_blank" class="text-decoration-none">Thaís ADM</a><img src="admin.png" class="rounded float-end" style="width: 40px"/></th>
                       <td class="text-end"><img src="imagem/positions/Position_Gold-Support.png" class="rounded float-end" style="width: 40px"/></td>
                       <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
                     </tr> 
@@ -696,28 +696,76 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <th scope="row"><a href="https://euw.op.gg/summoner/userName=Bituzera" target="_blank" class="text-decoration-none">Bituzera<img src="medalha.png" class="rounded float-end" style="width: 40px"/></a></th>
+                    <th scope="row"><a href="https://euw.op.gg/summoner/userName=Bituzera" target="_blank" class="text-decoration-none">Bituzera</a><img src="medalha.png" class="rounded float-end" style="width: 40px"/></th>
                     <td class="text-end"><img src="imagem/positions/Position_Plat-Top.png" class="rounded float-end" style="width: 40px"/></td>
                     <td class="text-end"><img src="platinum.png" class="rounded float-end" style="width: 40px"/></td>
                   </tr>
                   <tr>
-                    <th scope="row"><a href="https://euw.op.gg/summoner/userName=BR+YuuTaaWuu" target="_blank" class="text-decoration-none">BR YuutaaWuu <img src="medalha.png" class="rounded float-end" style="width: 40px"/></a></th>
+                    <th scope="row"><a href="https://euw.op.gg/summoner/userName=BR+YuuTaaWuu" target="_blank" class="text-decoration-none">BR YuutaaWuu</a><img src="medalha.png" class="rounded float-end" style="width: 40px"/></th>
                     <td class="text-end"><img src="imagem/positions/Position_Gold-Jungle.png" class="rounded float-end" style="width: 40px"/></td>
                     <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
                   </tr>   
                   <tr>
-                    <th scope="row"><a href="https://euw.op.gg/summoner/userName=L%C3%98RU" target="_blank" class="text-decoration-none">LØRU<img src="medalha.png" class="rounded float-end" style="width: 40px"/></a></th>
+                    <th scope="row"><a href="https://euw.op.gg/summoner/userName=L%C3%98RU" target="_blank" class="text-decoration-none">LØRU</a><img src="medalha.png" class="rounded float-end" style="width: 40px"/></th>
                     <td class="text-end"><img src="imagem/positions/Position_Diamond-Mid.png" class="rounded float-end" style="width: 40px"/></td>
                     <td class="text-end"><img src="diamond.png" class="rounded float-end" style="width: 40px"/></td>
                   </tr>
                   <tr>
-                    <th scope="row"><a href="https://euw.op.gg/summoner/userName=Droooooper" target="_blank" class="text-decoration-none">Droooooper<img src="medalha.png" class="rounded float-end" style="width: 40px"/></a></th>
+                    <th scope="row"><a href="https://euw.op.gg/summoner/userName=Droooooper" target="_blank" class="text-decoration-none">Droooooper</a><img src="medalha.png" class="rounded float-end" style="width: 40px"/></th>
                     <td class="text-end"><img src="imagem/positions/Position_Silver-Bot.png" class="rounded float-end" style="width: 40px"/></td></td>
                     <td class="text-end"><img src="silver.png" class="rounded float-end" style="width: 40px"/></td>
                   </tr>  
                   <tr>
-                    <th scope="row"><a href="https://euw.op.gg/summoner/userName=frey+agatsuma" target="_blank" class="text-decoration-none">Frey Agatsuma <img src="medalha.png" class="rounded float-end" style="width: 40px"/></a></th>
+                    <th scope="row"><a href="https://euw.op.gg/summoner/userName=frey+agatsuma" target="_blank" class="text-decoration-none">Frey Agatsuma</a><img src="medalha.png" class="rounded float-end" style="width: 40px"/></th>
                     <td class="text-end"><img src="imagem/positions/Position_Silver-Support.png" class="rounded float-end" style="width: 40px"/></td>
+                    <td class="text-end"><img src="silver.png" class="rounded float-end" style="width: 40px"/></td>
+                  </tr>  
+              </table>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <h1 class="text-center" id="1campeonato">Campeão Atual</h1>
+        </div>
+
+        <div class="container">
+          <div class="row">
+            <div class="col-6">
+              <img src="trofeu-bola.png" class="rounded mx-auto d-block" style="width: 40%">
+            </div>
+            <div class="col-6">
+              <table class="table">
+                <thead class="table-dark">
+                  <tr>
+                    <th scope="col" id="pain">PAIN EXODIA</th>
+                    <th class="text-end" scope="col">LANE</th>
+                    <th class="text-end" scope="col">RANKING</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row"><a href="https://euw.op.gg/summoner/userName=Menina+iCarlen" target="_blank" class="text-decoration-none">Menina iCarlen</a><img src="medalha.png" class="rounded float-end" style="width: 40px"/></th>
+                    <td class="text-end"><img src="imagem/positions/Position_Gold-Top.png" class="rounded float-end" style="width: 40px"/></td></td>
+                    <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
+                  </tr>                        
+                  <tr>
+                    <th scope="row"><a href="https://euw.op.gg/summoner/userName=Tiltin" target="_blank" class="text-decoration-none">Tiltin</a><img src="medalha.png" class="rounded float-end" style="width: 40px"/></th>
+                    <td class="text-end"><img src="imagem/positions/Position_Gold-Jungle.png" class="rounded float-end" style="width: 40px"/></td></td>
+                    <td class="text-end"><img src="gold.png" class="rounded float-end" style="width: 40px"/></td>
+                  </tr>   
+                  <tr>
+                    <th scope="row"><a href="https://euw.op.gg/summoner/userName=L%C3%98RU" target="_blank" class="text-decoration-none">LØRU</a><img src="medalha.png" class="rounded float-end" style="width: 40px"/></th>
+                    <td class="text-end"><img src="imagem/positions/Position_Diamond-Mid.png" class="rounded float-end" style="width: 40px"/></td></td>
+                    <td class="text-end"><img src="diamond.png" class="rounded float-end" style="width: 40px"/></td>
+                  </tr>                  
+                  <tr>
+                    <th scope="row"><a href="https://euw.op.gg/summoner/userName=Shauna+%CE%BDayne" target="_blank" class="text-decoration-none">Shauna νayne</a><img src="medalha.png" class="rounded float-end" style="width: 40px"/></th>
+                    <td class="text-end"><img src="imagem/positions/Position_Plat-Bot.png" class="rounded float-end" style="width: 40px"/></td></td>
+                    <td class="text-end"><img src="platinum.png" class="rounded float-end" style="width: 40px"/></td>
+                  </tr>  
+                  <tr>
+                    <th scope="row"><a href="https://euw.op.gg/summoner/userName=Sexy+Karma" target="_blank" class="text-decoration-none">Sexy Karma</a><img src="medalha.png" class="rounded float-end" style="width: 40px"/></th>
+                    <td class="text-end"><img src="imagem/positions/Position_Silver-Support.png" class="rounded float-end" style="width: 40px"/></td></td>
                     <td class="text-end"><img src="silver.png" class="rounded float-end" style="width: 40px"/></td>
                   </tr>  
               </table>
